--- a/config/west.yml
+++ b/config/west.yml
@@ -1,7 +1,7 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/lucordes
+      url-base: https://github.com/irizwaririz
   projects:
     - name: zmk
       remote: zmkfirmware
