--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,11 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+      url-base: https://github.com/lucordes
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: lucordes
+      revision: queue
       import: app/west.yml
   self:
     path: config
