--- a/config/west.yml
+++ b/config/west.yml
@@ -1,6 +1,8 @@
 manifest:
   remotes:
     - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
+    - name: main
       url-base: https://github.com/lucordes
   projects:
     - name: zmk
