--- a/config/west.yml
+++ b/config/west.yml
@@ -2,11 +2,9 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: main
-      url-base: https://github.com/lucordes
   projects:
     - name: zmk
-      remote: main
+      remote: zmkfirmware
       revision: main
       import: app/west.yml
   self:
